--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ro">
 <head>
@@ -7,8 +6,8 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Servicii Disponibile</title>
-<meta content='https://i.postimg.cc/HLpFPpYG/imagen-2025-09-08-015927363.png' property='og:image'/>
+<title>Serviciu privat</title>
+<meta content='https://i.postimg.cc/0yHfKk7Y/449174838-343287448803551-2458764714684644955-n.jpg' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
@@ -56,5 +55,8 @@ Ești major și cauți divertisment pe acest site?
       /*]]>*/ 
 </body>
 </html>
+
+
+
 
 
